Fix misaligned poll rows when swapping axes #975

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -985,7 +985,7 @@
         }
         .cp-poll-cell {
             width: 100px;
-            height: 35px;
+            height: 40px;
             display: inline-flex;
             align-items: center;
             justify-content: center;
